# event-system

./: '  .gitignore  CMakeLists.txt  README.md  ]  build.sh
.github/workflows/: cmake.yml
example/: CMakeLists.txt  main.cpp
example/shared/: CMakeLists.txt  main.cpp
example/static/: CMakeLists.txt
include/GES/: Bus.hpp  Event.hpp  EventBus.hpp  EventHandler.hpp  EventListener.hpp  EventListenerHandle.hpp  GES.hpp  Handler.hpp  IEvent.hpp  IEventListener.hpp  ISender.hpp  Listener.hpp  Priority.hpp  Subscriber.hpp
include/GES/Event/: EventBase.hpp  EventTemplate.hpp  EventTools.hpp
include/GES/EventBus/: EventBus.Handle.hpp  EventBus.hpp
include/GES/Listener/: ListenerBase.hpp  ListenerResource.hpp  ListenerTools.hpp
include/GES/Utils/: UniqueGenerator.hpp
src/: Bus.cpp  CMakeLists.txt  EventBus.Impl.cpp  EventBus.cpp  EventListenerHandle.cpp  Handle.cpp  Handler.cpp  IEvent.cpp  Subscriber.cpp
src/include/: EventBus.Impl.hpp  UniqueGenerator.hpp
test/: CMakeLists.txt
test/src/: example.cpp  example.hpp  hook.cpp  id.cpp  lambda.cpp  loop.cpp  queue.cpp  thread.cpp
